--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 <h1>{{ title }}</h1>
 <hr />
 <app-counter></app-counter>
-
+<hr />
+<app-heroes />
+<hr />
+<app-heroes-hero />
+<hr />
+<app-heroes-list />
+<hr />
