feat(frontend): dbz module, list and addCharacter component, understanding services, interfaces and forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<h1>{{ title }}</h1>
-<hr />
+
+<app-main-page/>
+
+<!-- <hr />
 <app-counter></app-counter>
 <hr />
 <app-heroes />
@@ -8,3 +10,4 @@
 <hr />
 <app-heroes-list />
 <hr />
+ -->
